[package]
name = "spl_tool"
version = "0.1.1"
edition = "2021"
authors = ["rmsyn <rmsynchls@gmail.com>"]
repository = "https://github.com/rmsyn/spl_tool"
categories = ["embedded", "hardware-support", "no-std"]
description = "Port of StarFive's C spl_tool with default support for VisionFive2"
keywords = ["riscv", "visionfive2", "u-boot", "spl"]
license = "GPL-2.0-or-later"

[dependencies]
log = "0.4"

[dependencies.env_logger]
version = "0.9"
optional = true

[dependencies.clap]
version = "4.1.8"
features = ["derive"]
optional = true

[features]
cli = ["clap", "env_logger"]
